--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -17,8 +17,9 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md, README.md
 
 library
-  exposed-modules:     Lib
+  exposed-modules:     DConf
   build-depends:       base
+                     , megaparsec
   hs-source-dirs:      src
   default-language:    Haskell2010
 
