--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -18,9 +18,11 @@ extra-source-files:  CHANGELOG.md, README.md
 
 library
   exposed-modules:     DConf
+                     , DConfParser
   build-depends:       base
                      , containers
                      , parsec
+                     , parsec3-numbers
   hs-source-dirs:      src
   default-language:    Haskell2010
 
