--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -18,7 +18,8 @@ extra-source-files:  CHANGELOG.md, README.md
 
 library
   exposed-modules:     DConf
-                     , DConfParser
+                     , Domain
+                     , Nix
   build-depends:       base
                      , containers
                      , parsec
