--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -30,5 +30,6 @@ executable dconf2nix
   main-is:             Main.hs
   build-depends:       base
                      , dconf2nix
+                     , parsec
   hs-source-dirs:      app
   default-language:    Haskell2010
