--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -16,7 +16,7 @@ extra-source-files:  CHANGELOG.md, README.md
 
 library
   exposed-modules:     DConf
-                     , Domain
+                     , DConf.Data
                      , Nix
   build-depends:       base
                      , containers
