--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -15,11 +15,14 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md, README.md
 
 library
-  exposed-modules:     DConf
+  exposed-modules:     CommandLine
+                     , DConf
                      , DConf.Data
+                     , DConf2Nix
                      , Nix
   build-depends:       base
                      , containers
+                     , optparse-applicative
                      , parsec
                      , text
   hs-source-dirs:      src
@@ -29,7 +32,5 @@ executable dconf2nix
   main-is:             Main.hs
   build-depends:       base
                      , dconf2nix
-                     , parsec
-                     , text
   hs-source-dirs:      app
   default-language:    Haskell2010
