--- a/data/dconf.settings
+++ b/data/dconf.settings
@@ -1,3 +1,6 @@
+[org/virt-manager/virt-manager/urls]
+isos=['/home/bbigras/Downloads/something {ddsa}']
+
 [ org/gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9 ]
 foo=true
 
