--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -27,6 +27,21 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
+test-Suite dconf2nix-tests
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Main.hs
+  other-modules:       DConfTest
+  build-depends:       base
+                     , containers
+                     , dconf2nix
+                     , hedgehog
+                     , parsec
+                     , template-haskell
+                     , text
+  default-language:     Haskell2010
+  ghc-options:         -Wall -threaded -with-rtsopts -N
+
 executable dconf2nix
   main-is:             Main.hs
   build-depends:       base
