Optimizing CI build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: "actions/checkout@v2.1.0"
-      - uses: "cachix/install-nix-action@v9"
+      - uses: "cachix/install-nix-action@v10"
+        with:
+          skip_adding_nixpkgs_channel: true
       - uses: "cachix/cachix-action@v6"
         with:
           name: dconf2nix
