--- a/data/dconf.settings
+++ b/data/dconf.settings
@@ -301,3 +301,14 @@ locations=[<(uint32 2, <('Gdańsk', 'EPGD', true, [(0.94916821905848536, 0.32230
 
 [system/locale]
 region='en_US.UTF-8'
+
+[issue28/desktop/ibus/panel/emoji]
+favorites=['\8211', '\8594', '\8593', '\8595', '\8482', '\\u00ad', '\176', '\\v', '\160', '\171', '\8451']
+
+[issue28/org/gnome/desktop/input-sources]
+mru-sources=[('xkb', 'us+altgr-intl'), ('ibus', 'mozc-jp')]
+sources=[('xkb', 'us+altgr-intl'), ('ibus', 'mozc-jp')]
+nxkb-options=['terminate:ctrl_alt_bksp']
+
+[issue28/org/gnome/clocks]
+world-clocks=[{'location': <(uint32 2, <('Houston', 'KHOU', false, [(0.51727195705981943, -1.6629933445314968)], [(0.51727195705981943, -1.6629933445314968)])>)>}, {'location': <(uint32 2, <('Singapore', 'WSAP', true, [(0.023852838928353343, 1.8136879868485383)], [(0.022568084612667797, 1.8126262332513803)])>)>}]
