Add TOC + bump version to 0.0.7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           name: dconf2nix
           signingKey: "${{ secrets.CACHIX_SIGNING_KEY }}"
-      - run: nix-shell --run "nix-build-uncached default.nix" ci.nix
+      - run: nix-shell --run "nix-build-uncached default.nix" nix/ci.nix
