--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,15 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2.1.0
-      - uses: nixbuild/nix-quick-install-action@v2
-      - uses: cachix/cachix-action@v6
+      - uses: actions/checkout@v2.3.2
+
+      - name: "Install Nix ❄️"
+        uses: cachix/install-nix-action@v12
+        with:
+          skip_adding_nixpkgs_channel: true
+
+      - name: "Install Cachix ❄️"
+        uses: cachix/cachix-action@v8
         with:
           name: dconf2nix
           signingKey: "${{ secrets.CACHIX_SIGNING_KEY }}"
