--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,14 @@ jobs:
       - uses: actions/checkout@v2.3.2
 
       - name: "Install Nix ❄️"
-        uses: cachix/install-nix-action@v12
+        uses: cachix/install-nix-action@v13
         with:
-          skip_adding_nixpkgs_channel: true
+          extra_nix_config: "experimental-features = nix-command"
 
       - name: "Install Cachix ❄️"
-        uses: cachix/cachix-action@v8
+        uses: cachix/cachix-action@v10
         with:
           name: dconf2nix
           signingKey: "${{ secrets.CACHIX_SIGNING_KEY }}"
+
       - run: nix-shell --run "nix-build-uncached default.nix" nix/ci.nix
