fixes #57 (header containing _)

--- a/data/headers.settings
+++ b/data/headers.settings
@@ -8,3 +8,6 @@ name="Yaru"
 round-avatars=false
 startup-accounts=['account_name']
 window-geometry={'account_name': (30, 26, 694, 1182)}
+
+[org/gnome/shell/extensions/bluetooth_battery_indicator]
+hide-indicator=true
