--- a/data/json.settings
+++ b/data/json.settings
@@ -1,3 +1,7 @@
 [org/gnome/shell/extensions/sound-output-device-chooser]
 hide-on-single-device=true
 ports-settings='{"version":2,"ports":[]}'
+
+[org/gnome/shell/extensions/list-of-json]
+foo=['{"_model":{}}']
+devices=['{"_model":{},"name":"FakeName","isConnected":false,"isPaired":true,"mac":"00:16:00:29:00:83","isDefault":false,"active":true,"icon":"audio-headphones-symbolic"}']
