feature: add emoji support

--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -21,6 +21,7 @@ library
   other-modules:       Paths_dconf2nix
   build-depends:       base
                      , containers
+                     , emojis
                      , optparse-applicative
                      , parsec
                      , text
