--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -27,6 +27,7 @@ library
                      , text
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall
 
 test-Suite dconf2nix-tests
   type:                exitcode-stdio-1.0
@@ -50,3 +51,4 @@ executable dconf2nix
                      , dconf2nix
   hs-source-dirs:      app
   default-language:    Haskell2010
+  ghc-options:         -Wall
