--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,17 +8,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.2
+      - uses: actions/checkout@v3
 
       - name: "Install Nix ❄️"
-        uses: cachix/install-nix-action@v13
-        with:
-          extra_nix_config: "experimental-features = nix-command"
+        uses: cachix/install-nix-action@v22
 
       - name: "Install Cachix ❄️"
-        uses: cachix/cachix-action@v10
+        uses: cachix/cachix-action@v12
         with:
           name: dconf2nix
           signingKey: "${{ secrets.CACHIX_SIGNING_KEY }}"
