Add full Unicode support
`dconf dump` uses `g_variant_print`, which prints most Unicode characters verbatim.
dconf2nix would read those and then use `show` to serialize the parsed strings.
But `show` encodes Unicode characters as a decimal number preceded by a backslash,
(e.g. `\129315`), which means nothing to Nix.

Let’s encode strings as UTF-8 when dumping them to Nix.

Also fix the test data from e2b5065718f4de55ce7afe4c8d385a123eaf3e1b,
they were copied as reported by `parserTraced` but the actual data
was mostly Unicode with few escape sequences.

--- a/data/dconf.settings
+++ b/data/dconf.settings
@@ -303,7 +303,7 @@ locations=[<(uint32 2, <('Gdańsk', 'EPGD', true, [(0.94916821905848536, 0.32230
 region='en_US.UTF-8'
 
 [issue28/desktop/ibus/panel/emoji]
-favorites=['\8211', '\8594', '\8593', '\8595', '\8482', '\\u00ad', '\176', '\\v', '\160', '\171', '\8451']
+favorites=['–', '→', '↑', '↓', '™', '\u00ad', '°', '\v', ' ', '«', '℃']
 
 [issue28/org/gnome/desktop/input-sources]
 mru-sources=[('xkb', 'us+altgr-intl'), ('ibus', 'mozc-jp')]
