--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -4,11 +4,11 @@ name:                dconf2nix
 version:             0.1.1
 synopsis:            Convert dconf files to Nix, as expected by Home Manager.
 description:         A convenient converter of DConf files to Nix, as expected by Home Manager's dconf settings. So you can Nixify your Gnome Shell configuration ;)
-bug-reports:         https://github.com/gvolpe/dconf2nix/issues
+bug-reports:         https://github.com/nix-commmunity/dconf2nix/issues
 license:             Apache-2.0
 license-file:        LICENSE
 author:              gvolpe
-maintainer:          volpegabriel@gmail.com
+maintainer:          jtojnar@gmail.com
 build-type:          Simple
 extra-source-files:  README.md
 
