Parse all casts

--- a/data/typed.settings
+++ b/data/typed.settings
@@ -2,7 +2,18 @@
 empty-dict=@a{sv} {}
 empty-array-dict=@a{sv} []
 just-str=@ms 'hello'
-ui32=uint32 7
+boolean=boolean true
+byte=byte 23
+int16=int16 30
+uint16=uint16 25
+int32=int32 26
+uint32=uint32 24
+handle=handle 22
+int64=int64 27
+uint64=uint64 21
+double=double 28.2
+string=string "foo"
+objectpath=objectpath "/org/gnome/xyz"
 at-u=@u 5
 empty-arr=@a(dd) []
 just-empty-str=@ms ""
