--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -22,7 +22,7 @@ library
   build-depends:       base
                      , containers
                      , optparse-applicative
-                     , parsec
+                     , parsec >= 3.1.16.0
                      , text
   hs-source-dirs:      src
   default-language:    Haskell2010
