--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -24,6 +24,7 @@ library
                      , optparse-applicative
                      , parsec >= 3.1.16.0
                      , text
+                     , utf8-string
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
