Add support for hexadecimal and octal numbers
I switched from `read` to our custom parsing because `read` expects
the `0o` prefix instead of C-style `0`.
We only handle integers for now, as `read` for `Double` does not support
decimal numbers with `0x` prefix and I did not want to implement decimals myself.

Additionally, add support for + sign.

Also merge `negative.settings` test file into `dconf.settings` since
that one aggregates configuration keys from real dconf dumps.
Instead create `numbers.settings` that tests all possible numeric values.

Currently unhandled cases:

    zero-trailing=0.
    zero-leading=.0
    hex-float=0x10.1

GLib’s GVariant parses octal decimals a base 10.
This is probably expected, as the docs only mention hex floats.

    oct-float=010.1
    oct-sci=010e10

GLib’s GVariant parses the following as a double,
probably confusing it with scientific notation:

    hex-neg-e=-0x1e

--- a/data/dconf.settings
+++ b/data/dconf.settings
@@ -173,6 +173,9 @@ initial-size=(890, 550)
 maximized=false
 sidebar-width=189
 
+[org/gnome/settings-daemon/plugins/color]
+night-light-last-coordinates=(43.684199280057591, -79.347200000000001)
+
 [org/gnome/settings-daemon/plugins/media-keys]
 custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']
 
@@ -296,3 +299,6 @@ foo_bar='test'
 
 [com/github/wwmm/easyeffects/streamoutputs/compressor#0]
 sidechain-input-device='alsa_input.platform-snd_aloop.0.analog-stereo'
+
+[org/gnome/gnome-commander/preferences/general]
+file-list-tabs=[('file:///home/alice', byte 0x00, byte 0x01, false, false), ('file:///home/alice', 0x01, 0x01, false, false)]
