Add NixOS support
NixOS 23.11 received support for creating dconf databases in NixOS configuration.
The GVariant library in Nixpkgs has slightly different syntax, though,
so let’s make the output style configurable and add support for that.
https://www.github.com/NixOS/nixpkgs/pull/234615

--- a/dconf2nix.cabal
+++ b/dconf2nix.cabal
@@ -2,8 +2,8 @@ cabal-version:       2.4
 
 name:                dconf2nix
 version:             0.1.1
-synopsis:            Convert dconf files to Nix, as expected by Home Manager.
-description:         A convenient converter of dconf files to Nix, as expected by Home Manager’s dconf settings. So you can Nixify your GNOME Shell configuration ;)
+synopsis:            Convert dconf files to Nix, as expected by Home Manager or NixOS.
+description:         A convenient converter of dconf files to Nix, as expected by Home Manager or NixOS’s dconf settings. So you can Nixify your GNOME Shell configuration ;)
 bug-reports:         https://github.com/nix-commmunity/dconf2nix/issues
 license:             Apache-2.0
 license-file:        LICENSE
